--- a/src/app/projects/components/details-projects/details-projects.component.html
+++ b/src/app/projects/components/details-projects/details-projects.component.html
@@ -9,7 +9,7 @@
     
   </div>
   <div class="action-buttons">
-    <a routerLink="/userstory" class="btn-view-stories">Ver Historias de Usuario</a>
+    <a   [routerLink]="['/userstory', projectId]" class="btn-view-stories">Ver Historias de Usuario</a>
     <button class="btn-create-story" (click)="openCreateStoryModal()">Crear Nueva Historia</button>
     <button class="btn-update-project" (click)="openModal()">Actualizar Proyecto</button>
   </div>
