--- a/src/app/user-stories/components/update-user-stories/update-user-stories.component.css
+++ b/src/app/user-stories/components/update-user-stories/update-user-stories.component.css
@@ -57,7 +57,7 @@
 .error-message {
   color: #dc3545;
   font-size: 14px;
-  display: none; /* Oculto por defecto, se mostrará solo cuando haya un error */
+  margin-top: 5px;
 }
 
 /* Botones del formulario */
