--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,6 +14,9 @@
     @else if (currentRoute.startsWith('details-projects')) {
       <app-details-projects></app-details-projects>
     }
+    @else if (currentRoute == 'dashboard') {
+      <app-projects></app-projects>
+    }
     
   </div>
 </div>
